- lots of fixes from IntelliJ code inspector - replaced Base64 code with commons-codec